tests/grammar/snapshots/r#mod__grammar__alpha034__import-8.snap
---
source: tests/grammar/alpha034.rs
expression: "parse(&tokenize(\"import\"))"
---
(
    Some(
        [
            (
                Import(
                    (
                        false,
                        0..6,
                    ),
                    (
                        "import",
                        0..6,
                    ),
                    (
                        ImportAll,
                        0..6,
                    ),
                    (
                        "from",
                        0..6,
                    ),
                    (
                        "",
                        0..6,
                    ),
                ),
                0..6,
            ),
        ],
    ),
    [
        found end of input at 0..6 expected '"*"', or '"{"',
        found end of input at 0..6 expected '"from"',
        found end of input at 0..6 expected '"\""',
    ],
)
