tests/grammar/snapshots/r#mod__grammar__alpha034__import.snap
---
source: tests/grammar/alpha034.rs
expression: "parse(\"import * \\\"path/to/module\\\"\").unwrap()"
---
Import(
    ImportAll,
    "path/to/module",
)
