tests/grammar/snapshots/r#mod__grammar__alpha034__keywords-2.snap
---
source: tests/grammar/alpha034.rs
expression: "parse(\"continue\").unwrap()"
---
Statement(
    [
        Statement(
            Statement(
                Continue(
                    (),
                ),
                None,
            ),
        ),
    ],
)
