tests/grammar/snapshots/r#mod__grammar__alpha034__keywords-3.snap
---
source: tests/grammar/alpha034.rs
expression: "parse(\"fail\").unwrap()"
---
(
    Statement(
        [
            (
                Fail(
                    None,
                ),
                0..4,
            ),
        ],
    ),
    0..4,
)
