tests/grammar/snapshots/r#mod__grammar__alpha034__keywords-4.snap
---
source: tests/grammar/alpha034.rs
expression: "parse(\"fail 1\").unwrap()"
---
(
    Statement(
        [
            (
                Fail(
                    Some(
                        (
                            Number(
                                (
                                    1.0,
                                    5..6,
                                ),
                            ),
                            5..6,
                        ),
                    ),
                ),
                0..6,
            ),
        ],
    ),
    0..6,
)
