tests/grammar/snapshots/r#mod__grammar__alpha034__keywords-5.snap
---
source: tests/grammar/alpha034.rs
expression: "parse(\"echo 1\").unwrap()"
---
(
    Statement(
        [
            (
                Echo(
                    (
                        Number(
                            (
                                1.0,
                                5..6,
                            ),
                        ),
                        5..6,
                    ),
                ),
                0..6,
            ),
        ],
    ),
    0..6,
)
