tests/grammar/snapshots/r#mod__grammar__alpha034__keywords-6.snap
---
source: tests/grammar/alpha034.rs
expression: "parse(\"return\").unwrap()"
---
[
    (
        Statement(
            (
                Return(
                    None,
                ),
                0..6,
            ),
        ),
        0..6,
    ),
]
