tests/grammar/snapshots/r#mod__grammar__alpha034__keywords-7.snap
---
source: tests/grammar/alpha034.rs
expression: "parse(\"return 1\").unwrap()"
---
Statement(
    [
        Statement(
            Statement(
                Return(
                    (),
                    Some(
                        Number(
                            1.0,
                        ),
                    ),
                ),
                None,
            ),
        ),
    ],
)
