tests/grammar/snapshots/r#mod__grammar__alpha034__keywords.snap
---
source: tests/grammar/alpha034.rs
expression: "parse(\"break\").unwrap()"
---
Statement(
    [
        Statement(
            Statement(
                Break(
                    (),
                ),
                None,
            ),
        ),
    ],
)
